examples/test/testpolicy6073.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6073
  namespace: namespace253
spec:
  podSelector:
    matchLabels:
      key20: value17
      key4: value1
      key10: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value13
          key12: value10
          key27: value11
      podSelector:
        matchLabels:
          key13: value20
          key18: value39
